# langchain-demo

./: Dockerfile  Makefile  README.md  pyproject.toml
langchain_demo/: config.py  hello.py  quickstart.py  server.py
langchain_demo/agents/: pirate_rag.py  pirate_rag_recipes.py  pirate_weather.py  simple_weather.py  weather.py
