[project]
name = "langchain-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan Davies"}
]
readme = "README.md"
requires-python = "=3.14"
dependencies = [
    "langchain (>=1.1.0,<2.0.0)"
]


[project.scripts]
print_hello = "langchain_demo.hello:print_hello"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
